log

Wed 16 Aug 2023 01:30:55 AM UTC: 
 tests:  0|7
total_score: 0/70
b00dd24
Thu 17 Aug 2023 02:40:56 AM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
88d3ec8
Thu 17 Aug 2023 02:55:45 AM UTC: 
 exercises.c | 119 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 112 insertions(+), 7 deletions(-)
 tests:  0|0
total_score: 70/70
519138a
Thu 17 Aug 2023 03:06:39 AM UTC: 
 exercises.c | 112 ++++++++++++++++++++++++++++++++----------------------------
 1 file changed, 59 insertions(+), 53 deletions(-)
In file included from test.c:1:
exercises.c:78:6: error: redefinition of ‘filterEvenNumbers’
   78 | int *filterEvenNumbers(int arr[], int size, int *newSize) {
      |      ^~~~~~~~~~~~~~~~~
exercises.c:48:6: note: previous definition of ‘filterEvenNumbers’ with type ‘int *(int *, int,  int *)’
   48 | int *filterEvenNumbers(int arr[], int size, int *newSize) {
      |      ^~~~~~~~~~~~~~~~~
test.c: In function ‘test_mergeSort’:
test.c:204:3: error: implicit declaration of function ‘mergeSortedArrays’ [-Werror=implicit-function-declaration]
  204 |   mergeSortedArrays(arr1, size1, arr2, size2, result);
      |   ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3fa442d
Thu 17 Aug 2023 03:07:27 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:78:6: error: redefinition of ‘filterEvenNumbers’
   78 | int *filterEvenNumbers(int arr[], int size, int *newSize) {
      |      ^~~~~~~~~~~~~~~~~
exercises.c:48:6: note: previous definition of ‘filterEvenNumbers’ with type ‘int *(int *, int,  int *)’
   48 | int *filterEvenNumbers(int arr[], int size, int *newSize) {
      |      ^~~~~~~~~~~~~~~~~
test.c: In function ‘test_mergeSort’:
test.c:204:3: error: implicit declaration of function ‘mergeSortedArrays’ [-Werror=implicit-function-declaration]
  204 |   mergeSortedArrays(arr1, size1, arr2, size2, result);
      |   ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a0f2c91
Thu 17 Aug 2023 03:10:38 AM UTC: 
 exercises.c | 112 ++++++++++++++++++++++++++++--------------------------------
 1 file changed, 53 insertions(+), 59 deletions(-)
 tests:  0|0
total_score: 70/70
cc60726
Thu 17 Aug 2023 03:11:17 AM UTC: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|0
total_score: 70/70
5d7179a
Thu 17 Aug 2023 03:11:56 AM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
total_score: 70/70
485c5aa
Thu 17 Aug 2023 03:12:42 AM UTC: 
 exercises.c | 29 ++++++++++++++++-------------
 1 file changed, 16 insertions(+), 13 deletions(-)
 tests:  0|0
total_score: 70/70
3a320fd
Thu 17 Aug 2023 03:17:43 AM UTC: 
 exercises.c | 33 ++++++++++++---------------------
 1 file changed, 12 insertions(+), 21 deletions(-)
 tests:  0|0
total_score: 70/70
150a6f2
Thu 17 Aug 2023 03:21:19 AM UTC: 
 exercises.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
 tests:  0|0
total_score: 70/70
743c820
Thu 17 Aug 2023 03:22:19 AM UTC: 
 exercises.c | 28 +++++++++++++++-------------
 1 file changed, 15 insertions(+), 13 deletions(-)
 tests:  0|0
total_score: 70/70
bc72a66
Thu 17 Aug 2023 03:35:07 AM UTC: 
 exercises.c | 26 ++++++++++++--------------
 1 file changed, 12 insertions(+), 14 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:182:16: error: ‘Nodo’ {aka ‘struct nodo’} has no member named ‘valor’
  182 |         newNodo->valor = arr[cont];
      |                ^~
exercises.c:183:16: error: ‘Nodo’ {aka ‘struct nodo’} has no member named ‘proxNodo’
  183 |         newNodo->proxNodo = NULL;
      |                ^~
exercises.c:189:16: error: ‘Nodo’ {aka ‘struct nodo’} has no member named ‘proxNodo’
  189 |             aux->proxNodo = newNodo;
      |                ^~
Compilation failed
f4e594a
Thu 17 Aug 2023 03:38:03 AM UTC: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|0
total_score: 70/70
1d4ff7d
Thu 17 Aug 2023 03:47:21 AM UTC: 
 exercises.c | 24 ++++++++++++++----------
 1 file changed, 14 insertions(+), 10 deletions(-)
 tests:  0|0
total_score: 70/70
a876162
Thu 17 Aug 2023 03:51:12 AM UTC: 
 exercises.c | 26 +-------------------------
 1 file changed, 1 insertion(+), 25 deletions(-)
In file included from test.c:1:
exercises.c:175:19: error: expected ‘;’ before ‘struct’
  175 | dinvokindoivndoknv
      |                   ^
      |                   ;
test.c: In function ‘test_crearListaEnlazada’:
test.c:331:19: error: implicit declaration of function ‘crearListaEnlazada’; did you mean ‘test_crearListaEnlazada’? [-Werror=implicit-function-declaration]
  331 |     Nodo* lista = crearListaEnlazada(arr, size);
      |                   ^~~~~~~~~~~~~~~~~~
      |                   test_crearListaEnlazada
test.c:331:19: error: initialization of ‘Nodo *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
adb1346
Thu 17 Aug 2023 03:51:25 AM UTC: 
 exercises.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  0|0
total_score: 70/70
3ba5aec
Thu 17 Aug 2023 03:56:11 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|1
total_score: 60/70
06685d3
